# farmpulse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: .env.example  main.py
backend/app/v1/: router.py
backend/app/v1/endpoints/: demo.py  health.py
backend/core/: settings.py
backend/database/: mongodb.py
backend/schemas/: schemas.py
backend/services/: agenttools.py  geminiclient.py  mcp_client.py  weathermcp.py  weatherpipeline.py  weathertool.py
backend/tests/: vertexTest.py
docs/: FarmPulse_Architecture.docx
gemini/: mcp.json
