[project]
name = "farmpulse"
version = "0.1.0"
description = "AI-powered field-health monitoring agent for the Google Cloud Rapid Agent Hackathon (MongoDB track)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
    # --- Web framework / ASGI server ---
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",

    # --- Configuration ---
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.9,<3.0",

    # --- MongoDB direct drivers (admin / seed paths only, per ADR-002) ---
    "pymongo>=4.9,<5.0",
    "motor>=3.6,<4.0",

    # --- MongoDB MCP server client (ADR-002: the agent's only persistence path) ---
    "mcp>=1.2,<2.0",
    "anyio>=4.4,<5.0",

    # --- Google Cloud AI: Vertex AI Gemini via Google ADK (ADR-001) ---
    "google-adk>=1.0,<2.0",
    "google-cloud-aiplatform>=1.70,<2.0",
    "google-genai>=1.0,<2.0",

    # --- Vector-search differentiator: Voyage AI embeddings (ADR-004) ---
    "voyageai>=0.3,<1.0",

    # --- Weather tool: Open-Meteo HTTP client ---
    "openmeteo-requests>=1.3,<2.0",
    "requests-cache>=1.2,<2.0",
    "retry-requests>=2.0,<3.0",

    # --- Geometry: field polygons / anomaly-zone GeoJSON ---
    "shapely>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tells the build backend that the importable package is backend/.
# Combined with the __init__.py files, this makes `from backend.* import ...`
# resolvable from any working directory once the project is installed.
[tool.hatch.build.targets.wheel]
packages = ["backend"]
